feat: implemented endpoints to get brand by code and to get all brands. Also added tests